--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.x</groupId>
+			<artifactId>xframework-redis</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
