--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.x</groupId>
+			<artifactId>xframework-httpclient</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.x</groupId>
 			<artifactId>xframework-redis</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
